# ggml-easier

./: .gitignore  CMakeLists.txt  README.md  ggml-easy.h  llama3.2.c  requirements.txt
demo/: basic-loop.cpp  basic-matmul-f16.cpp  basic-matmul-q4.cpp  basic-sum.cpp  basic.cpp  kyutai-mimi.cpp  llama3.2.cpp  load-gguf-llama.cpp
